2010-04-01  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-powerpc/apuinfo-nul.rd: New.
	* ld-powerpc/apuinfo-nul1.s: New.
	* ld-powerpc/powerpc.exp: Add it.

2010-03-31  Kai TIetz  <kai.tietz@onevision.com>

	* ld-pe//pe-compile.exp (run_basefile_test): Trim result of wc
	before string compare.

2010-03-31  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* ld-arm/script-type.sym: Fix test.

2010-03-31  Kai TIetz  <kai.tietz@onevision.com>

	* ld-pe/basefile1.s: New.
	* ld-pe/pe-compile.exp: Add base-file test.

2010-03-31  Hans-Peter Nilsson  <hp@axis.com>

	PR ld/11458
	* ld-cris/pcrelcp-1.d, ld-cris/pcrelcp-1.s: New test.

	* lib/ld-lib.exp (run_dump_test): When checking linker message and
	return code, when success with no message is expected, don't
	continue if we have an abnormal exit with a message.  Check output
	of inspection program and fail if it had output or an abnormal
	exit code.  Include "warning" and "error" among the directives
	where multiples are allowed and append to previous values.

	* ld-cris/cris.exp (loop over $srcdir/$subdir/*dso-*.d): Apply
	"file rootname", not "file tail", before applying runtest_file_p.

2010-03-29  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-arm/arm-elf.exp (armeabitests): Add v6-M farcall test.

2010-03-25  Joseph Myers  <joseph@codesourcery.com>

	* ld-elf/flags1.d, ld-elf/merge.d: XFAIL for tic6x-*-*.
	* ld-elf/sec-to-seg.exp: Set B_test_same_seg to 0 for tic6x-*-*.
	* ld-tic6x: New directory and testcases.

2010-03-19  Jie Zhang  <jie@codesourcery.com>

	PR ld/11304
	* ld-elf/pr11304.d: New test.
	* ld-elf/pr11304a.s: New test.
	* ld-elf/pr11304b.s: New test.
	* lib/ld-lib.exp (regexp_diff): Add support for #failif.

2010-03-15  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-elf/orphan-region.d, ld-elf/orphan-region.ld,
	ld-elf/orphan-region.s: New files.

2010-03-02  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* ld-arm/arm-merge-incompatible.d: New test.