@@ -1,0 +1,8 @@
+ .globl mainCRTStartup
+ .globl start
+ .text
+mainCRTStartup:
+start:
+
+ .section .foo,"b"
+ .space 16
